testsuite/tests/ghc-regress/parser/should_fail/all.T

include ($confdir ++ "/../vanilla-test.T")

test "read001" { vtcf("") }
test "read002" { vtcf("") }
test "read003" { vtcf("") }
test "read004" { vtcf("") }
test "read005" { vtcf("") }
test "read006" { vtcf("") }
test "read007" { vtcf("") }
test "read008" { vtcf("") }
test "read009" { vtcf("") }
--test "read010" { vtcf("") }
test "read011" { vtcf("") }
test "read012" { vtcf("") }
test "read013" { vtcf("-fglasgow-exts") }
test "read014" { vtcf("") }
test "read015" { vtcf("") }
test "read016" { vtcf("") }
test "read017" { vtcf("") }
